# md-models-example

./: 404.html  README.md  gen.toml  index.html  mkdocs.yml  model.md
.github/workflows/: docs.yml  gen.yml  pygen.yml
docs/: model.md
model/: index.html
python/: pyproject.toml
python/pyenzyme/: models.py
schemes/: enzymeml.json  enzymeml.shex  enzymeml.xsd
search/: search_index.json
specifications/: enzymeml.md
